@@ -66,6 +66,7 @@ twitux_add_dialog_show (GtkWindow *parent)
 	static TwituxAdd *add;
 	GtkBuilder       *ui;
 	gchar            *path;
+	guint             result;
 	GError           *err = NULL;
 
 	if (add) {
@@ -79,8 +80,14 @@ twitux_add_dialog_show (GtkWindow *parent)
 	ui = gtk_builder_new ();
 	gtk_builder_set_translation_domain (ui, GETTEXT_PACKAGE);
 	path = twitux_paths_get_glade_path (XML_FILE);
-	gtk_builder_add_from_file (ui, path, &err);
+	result = gtk_builder_add_from_file (ui, path, &err);
 	g_free (path);
+
+	if (result == 0) {
+		g_warning ("Unable to get xml file: %s", err->message);
+		g_error_free (err);
+		return;
+	}
 
 	/* Grab the widgets */
 	add->dialog = GTK_WIDGET (gtk_builder_get_object (ui, "add_friend_dialog"));
